comment modal fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,14 @@ body,
   width: fit-content !important;
   white-space: nowrap;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-thumb-color, #adadad);
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
